# docker-compose-django-sample

./: Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  uwsgi.ini
src/django_test/: settings.py  urls.py
src/xxxx/: apps.py
