[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["Atsuo Ishimoto <atsuoishimoto@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
sentry-sdk = "^1.15.0"
uwsgi = "^2.0.21"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
